assets/styles.css
.media-navbar-anchor {
    height: 15%;
    min-height: 35px;

    @media (min-width: 48em) {
        height: 5%;
    }
}

.media-navbar-button {
    height: 100%;
    
    @media (max-width: 48em) {
        font-size: 1rem;
    }
}

.media-navbar {
    height: 100%;
    overflow-y: scroll;
}

.mantine-Table-th {
    background-color: var(--mantine-color-myColors-2);
}

.potionmaker-border {
    border-style: groove;
    border-width: thick;
    border-color: var(--mantine-color-myColors-2);
    overflow: scroll;
}

.map-size {
    height: 50vh; 
    background-color: rgba(33,32,28,1.0);
    
    @media (min-width: 64em) {
        height: 75vh;
    }
}

